crates/pg_syntax/tests/snapshots/postgres_regress/money@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 2::int8 * m FROM money_data;"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..18
    AExpr@7..18
      TypeCast@7..14
        AConst@7..8
          Iconst@7..8 "2"
        Typecast@8..10 "::"
        TypeName@10..14
          Ident@10..14 "int8"
      Whitespace@14..15 " "
      Ascii42@15..16 "*"
      Whitespace@16..17 " "
      ColumnRef@17..18
        Ident@17..18 "m"
  Whitespace@18..19 " "
  From@19..23 "FROM"
  Whitespace@23..24 " "
  RangeVar@24..34
    Ident@24..34 "money_data"
  Ascii59@34..35 ";"

