crates/pg_syntax/tests/snapshots/postgres_regress/money@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO money_data VALUES ('123');"
---
InsertStmt@0..38
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "money_data"
  Whitespace@22..23 " "
  SelectStmt@23..36
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..36
      AConst@31..36
        Sconst@31..36 "'123'"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

